2005-06-11  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/exec.c:     Fixed various places where log calls
	* nsd/nsmain.c:   were fed with wrong number or wrong 
	* nsd/driver.c:   types of arguments.

	* nsd/nsd.h:      Added wrappers for mem-mapping files in
	* nsd/fastpath.c: platform-neutral way. Only the unix part
	* nsd/unix.c:     is implemented. The Windows part is still
	* nsd/nswin32.c:  left to be done.

2005-06-10  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd/driver.c:
        * nsd/binder.c: Determine path using Ns_PathIsAbsolute for Unix 
	domain sockets

	* nsd/tclresp.c: removed ns_returnbinary command. Added -binary
	flag to ns_return.

2005-06-10  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* include/ns.h Ns_SockBindUdp(), Ns_SockBindRaw() and Ns_SockBindUnix()
	are now exported.

	* nsd/init.c: NsInitBinder is also done for Windows as for Unix.

	* nsd/binder.c: Attempt to unify usage and call-conventions on various 
	Ns_SockListenXXX and Ns_SockBindXXX calls for various protocols 
	(tcp, udp, raw, unix).
	Also, parts not needed for windows build (pre-binding) are ifdef'ed out.
	Still open: handling of Unix-domain sockets on Windows. It might compile
	but will definitely not work because of the address parsing issues 
	(windows files do not begin with slash). This has to be sorted out.

2005-06-10  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/tclresp.test: updated to reflect parameters change 
	for ns_respond, new -binary flag

	* nsd/binder.c: make Ns_SockListenUnix to use prebound
	sockets if available.

2005-06-10  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/nswin32.c: Cosmetic changes (reformatted, untabified).
	Added NsRestoreSignals as no-op to make symetrical to Unix counterpart
	and avoid excessive ifdefs for Windows.
	Replaced GNU poll implementation.

	* nsd/unix.c: Cosmetic changes (reformatted, untabified).
	
2005-06-10  Stephen Deasey  <sdeasey@users.sf.net>

	* configure.in:
	* include/config.h.in: